tablet menu capitulos

--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <!-- cat -->
-        <img id="cat" src="https://raw.githubusercontent.com/gist/brudnak/aba00c9a1c92d226f68e8ad8ba1e0a40/raw/e1e4a92f6072d15014f19aa8903d24a1ac0c41a4/nyan-cat.gif" alt="">
+        <!-- <img id="cat" src="https://raw.githubusercontent.com/gist/brudnak/aba00c9a1c92d226f68e8ad8ba1e0a40/raw/e1e4a92f6072d15014f19aa8903d24a1ac0c41a4/nyan-cat.gif" alt=""> -->
 
         <!-- Icono para ir hacia arriba -->
         <a id="arriba" href="#inicioPagina">
@@ -147,10 +147,9 @@
                 <!-- Corona -->
                 <img id="corona" src="images/iconos/topcrownAmarillo.png" alt="">
 
-
                 <li>
                     <a id="textoTop"   href="">Top 1</a>
-                    <a href = "">
+                    <a href = "mangas/berserk/front.html">
                         <img id="top1" src="images/portadas/berserk.jpg" alt="">
                     </a>
                 </li>
@@ -230,10 +229,9 @@
                 <!-- Corona -->
                 <img id="corona" src="images/iconos/topcrownAmarillo.png" alt="">
 
-
                 <li>
                     <a id="textoTop"   href="">Top 1</a>
-                    <a href = "">
+                    <a href = "mangas/berserk/front.html">
                         <img id="top1" src="images/portadas/berserk.jpg" alt="">
                     </a>
                 </li>
@@ -342,10 +340,10 @@
                 </a>
             </article>
 
-            <article id="josei">
-                <h4>Ayanashi</h4>
+            <article id="seinen">
+                <h4>Houseki no Kuni</h4>
                 <a href="">
-                    <img id="PORTADAS" src="images/portadas/ayanashi.jpg" alt="">
+                    <img id="PORTADAS" src="images/portadas/houseki-no-kuni.jpg" alt="">
                 </a>
             </article>
 
@@ -405,10 +403,10 @@
                 </a>
             </article>
 
-            <article id="seinen">
-                <h4>Houseki no Kuni</h4>
+            <article id="josei">
+                <h4>Ayanashi</h4>
                 <a href="">
-                    <img id="PORTADAS" src="images/portadas/houseki-no-kuni.jpg" alt="">
+                    <img id="PORTADAS" src="images/portadas/ayanashi.jpg" alt="">
                 </a>
             </article>
 
