--- a/Lenguaje_de_marcas/mangak/mangas/-Plantilla/cap1.html
+++ b/Lenguaje_de_marcas/mangak/mangas/-Plantilla/cap1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../styles/fontawesome-free-6.3.0-web/css/all.css">
     <!-- icons-source -->
     <!-- https://fontawesome.com/icons/tag?s=solid&f=classic -->
-    <title>Capitulo 7</title>
+    <title>Capitulo Numero</title>
 </head>
 
 <body>
@@ -48,7 +48,6 @@
             <input type="checkbox" id="check">
 
             <ul>
-
                 <!-- Contenido/EDITAR -->
 
                 <!-- Avatar -->
@@ -72,33 +71,16 @@
     <main>
 
         <section class="control">
-            <a class="adelante" href="cap6.html"><i class="fa-solid fa-backward"></i></a>
+            <!-- <a class="adelante" href="cap1.html"><i class="fa-solid fa-backward"></i></a> -->
             <a class="menu" href="front.html"><i class="fa-solid fa-house"></i></a>
-            <a class="atras" href="cap8.html"><i class="fa-solid fa-forward"></i></a>
+            <a class="atras" href="cap2.html"><i class="fa-solid fa-forward"></i></a>
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
+        <!-- https://mangapark.net/ -->
+        <!-- https://heavenmanga.com/ -->
+        <img class="pagina" id="arriba" src="" alt="">
+        <img class="pagina" src="" alt="">
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/21.jpg" alt="">
     </main>
 
     <!-- Footer pag sim -->
