--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -432,9 +432,9 @@
             </article>
 
             <article id="seinen">
-                <h4>Houseki No Kuni</h4>
+                <h4>Naruto</h4>
                 <a href="">
-                    <img id="PORTADAS" src="images/portadas/houseki-no-kuni.jpg" alt="">
+                    <img id="PORTADAS" src="images/portadas/naruto.jpg" alt="">
                 </a>
             </article>
 
