--- a/Lenguaje_de_marcas/practicas/freshIdeas/index.html
+++ b/Lenguaje_de_marcas/practicas/freshIdeas/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flesh Idea</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 
@@ -15,7 +16,7 @@
         <!-- Navegacion -->
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a id="home" href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Portfolio</a></li>
@@ -27,11 +28,12 @@
 
 
         <!-- Banner -->
-        <article>
-            <h2>
+        <article class="banner">
+
+            <h1>
                 We serve Fresh Ideas
-            </h2>
-            
+            </h1>
+
             <p>
                 Lorem impsus dolor sit amet, consectetuer adipiscing elit. Donec molestie.
                 Sed aliquam sem ut arcu. Phasellus sollicitudin
@@ -45,6 +47,9 @@
 
         <!-- Aside / Latest news -->
         <aside>
+
+            <h2>Latest news</h2>
+
             <section>
 
                 <h3>Lorem ipsum</h3>
