--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -89,7 +89,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Noticias </a></li>
-                <li><a href="#">Mi Biblioteca </a></li>
+                <li><a href="#">Biblioteca </a></li>
             </ul>
             
             <!-- Barra de busqueda -->
