--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -36,7 +36,7 @@
                 <li><a href="#">Populares</a></li>
                 <li><a href="#">Nuevos</a></li>
                 <li><a href="#">Géneros</a>
-                    <!-- Desplegable -->
+                    <!-- Desplegable / Generos -->
                     <ul class="generos">
                         <li><input type="checkbox" id="gender1"> <label for="gender1">Acción</label></li>
                         <li><input type="checkbox" id="gender2"> <label for="gender2">Aventura</label></li>
@@ -309,15 +309,13 @@
         <!-- Main / portadas de mangas -->
         <main>
             <!-- 
-                id="PORTADAS"
+                 - Border type identificator -
 
-                id="kodomo"     -niños pequeños
-                id="shonen"     -chicos adolescentes
-                id="shojo"      -chicas adolescentes
-                id="seinen"     -hombres jobenes y adultos
-                id="josei"      -mujeres jovenes y adultos
-                id=""
-                id=""
+                id="kodomo"     -para niños pequeños
+                id="shonen"     -para chicos adolescentes
+                id="shojo"      -para chicas adolescentes
+                id="seinen"     -para hombres jobenes y adultos
+                id="josei"      -para mujeres jovenes y adultos
             
                 <article id="seinen">
                     <h4>nombre</h4>
