--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
@@ -27,7 +27,7 @@
                 <li><a href="#">Géneros</a></li>
                 <li><a href="#">Nuevos</a></li>
                 <li><a href="#">Noticias </a></li>
-                <li><a href="#">Mi Biblioteca </a></li>
+                <li><a href="#">Biblioteca </a></li>
             </ul>
 
             <!-- Barra de busqueda -->
